<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright 2016 Carl-Philipp Harmant

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">

    <!-- Drawer Menu -->
    <string name="menu_favorites">Favorites</string>
    <string name="menu_train">Train</string>
    <string name="menu_bus">Bus</string>
    <string name="menu_divvy">Divvy</string>
    <string name="menu_nearby">Nearby</string>
    <string name="menu_cta_map">CTA map</string>
    <string name="menu_rate">Rate this app</string>
    <string name="menu_settings">Settings</string>

    <!-- Bundle -->
    <string name="bundle_train_arrivals">trainArrivals</string>
    <string name="bundle_bus_arrivals">busArrivals</string>
    <string name="bundle_error">error</string>
    <string name="bundle_bike_station">station</string>
    <string name="bundle_bus_stop_id">busStopId</string>
    <string name="bundle_bus_route_id">busRouteId</string>
    <string name="bundle_bus_bound">bound</string>
    <string name="bundle_bus_bound_title">boundTitle</string>
    <string name="bundle_bus_stop_name">busStopName</string>
    <string name="bundle_bus_route_name">busRouteName</string>
    <string name="bundle_bus_latitude">latitude</string>
    <string name="bundle_bus_longitude">longitude</string>
    <string name="bundle_bus_id">busId</string>
    <string name="bundle_bus_bounds">bounds</string>
    <string name="bundle_train_line">line</string>
    <string name="bundle_bike_stations">bikeStations</string>
    <string name="bundle_train_stationId">stationId</string>
    <string name="bundle_title">title</string>
    <string name="bundle_train_error">trainError</string>
    <string name="bundle_bus_error">busError</string>
    <string name="bundle_bike_error">bikeError</string>

    <string name="empty_string">&#160;</string>
    <string name="app_name">Chicago Commutes</string>
    <string name="favorites">Favorites</string>
    <string name="train">Train</string>
    <string name="bus">Bus</string>
    <string name="divvy">Divvy</string>
    <string name="nearby">Nearby</string>
    <string name="cta_map">CTA map</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_refresh">Refresh</string>
    <string name="progress_error">Error, try to refresh</string>
    <string name="progress_message">Loading&#8230;</string>
    <string name="progress_wait">Please wait</string>

    <!-- Favorites -->
    <string name="no_fav">Welcome to Chicago Commutes!</string>
    <string name="add_fav">Add favorites from</string>
    <string name="add_fav2">train/bus/bike tab</string>
    <string name="favorites_detail">details</string>
    <string name="favorites_view_trains">view trains</string>
    <string name="favorites_view_buses">view buses</string>
    <string name="favorites_view_station">view station</string>

    <!-- Station -->
    <string name="station_activity">Station</string>
    <string name="station_name">Station Name</string>
    <string name="train_station_activity">Stations</string>
    <string name="station_activity_google_map_link_desc">Link to google map</string>
    <string name="station_activity_street_view">Street view</string>
    <string name="station_activity_favorite_icon">Favorite</string>
    <string name="station_activity_map_icon">Map</string>
    <string name="station_activity_walk_icon">Walk</string>

    <!-- Bus -->
    <string name="bus_activity_google_map_link_desc">Link to google map</string>
    <string name="bus_activity_no_service">No service</string>
    <string name="bus_fragment_filter">Filter</string>
    <string name="bus_fragment_notloaded">Divvy data deactivated</string>
    <string name="bus_all_results">Display all results</string>

    <!-- Bus Bound -->
    <string name="bus_bound_activity">Bus Bound</string>

    <!-- Error -->
    <string name="error_desc">Error</string>
    <string name="error_retry">Retry</string>

    <!-- Search -->
    <string name="search_title">Search</string>
    <string name="search_hint">Search&#8230;</string>

    <!-- Nearby -->
    <string name="nearby_check_box">Hide stations/stops with no results</string>

    <!-- Loading -->
    <string name="loading_image_description">A nice description</string>

    <!-- Bike -->
    <string name="bike_activity">Divvy</string>
    <string name="bike_fragment_filter">Filter</string>
    <string name="bike_available_bikes">Available bikes&#160;&#160;</string>
    <string name="bike_available_docks">Available docks&#160;</string>

    <!-- Map -->
    <string name="map_activity">Map</string>
    <string name="map_train_follow_error">Unable to determine upcoming stops</string>

    <!-- Analytics -->
    <string name="analytics_bike_fragment">Bike fragment</string>
    <string name="analytics_bus_fragment">Bus fragment</string>
    <string name="analytics_favorites_fragment">Favorites fragment</string>
    <string name="analytics_nearby_fragment">Nearby fragment</string>
    <string name="analytics_train_fragment">Train fragment</string>
    <string name="analytics_cta_map_fragment">CTA map fragment</string>
    <string name="analytics_settings_fragment">Settings fragment</string>

    <string name="analytics_bus_details">Bus details</string>
    <string name="analytics_train_details">Train details</string>
    <string name="analytics_bus_map">Map bus</string>
    <string name="analytics_train_map">Map train</string>


    <string name="analytics_category_ui">UI</string>
    <string name="analytics_category_req">Request</string>
    <string name="analytics_action_press">Press</string>
    <string name="analytics_action_get_bus">CTA Bus</string>
    <string name="analytics_action_get_train">CTA Train</string>
    <string name="analytics_action_get_divvy">Divvy</string>
    <string name="analytics_action_get_google">Google</string>

    <string name="analytics_action_get_divvy_all">All</string>

    <string name="analytics_action_get_google_map_street_view">Street View Picture</string>

    <string name="analytics_action_refresh_fav">Refresh favorites</string>

    <!-- Requests -->
    <string name="request_map_id">mapid</string>
    <string name="request_vid">vid</string>
    <string name="request_rt">rt</string>
    <string name="request_dir">dir</string>
    <string name="request_stop_id">stpid</string>
    <string name="request_runnumber">runnumber</string>

    <!-- Time -->
    <string name="time_now">now</string>
    <string name="time_min">&#160;min</string>
    <string name="time_hour">&#160;h&#160;</string>

    <!-- Message -->
    <string name="message_no_bus_found">No bus found!</string>
    <string name="message_no_train_found">No trains found!</string>
    <string name="message_error_while_loading_data">Error while loading data!</string>
    <string name="message_see_all_buses_on_line">See all buses on line&#160;</string>
    <string name="message_error_google_street">Error while connecting to google street view API</string>
    <string name="message_network_error">No network connection detected!</string>
    <string name="message_add_fav">Added to favorites!</string>
    <string name="message_remove_fav">Removed from favorites!</string>
    <string name="message_too_fast">You are a bit fast! Try again in a second!</string>
    <string name="message_not_ready">Not ready yet. Please try again in few seconds!</string>
    <string name="message_something_went_wrong">Oops something went wrong!</string>
    <string name="message_surprising_error">A surprising error has occurred. Try again!</string>
    <string name="message_error">Error!</string>
    <string name="message_error_could_not_load_path">Sorry, could not load the path!</string>
    <string name="message_error_divvy">Error while connecting or parsing divvy data</string>
    <string name="message_error_train_favorites">Could not load trains :(</string>
    <string name="message_error_bus_favorites">Could not load buses :(</string>
    <string name="message_error_bike_favorites">Could not load bikes :(</string>
    <string name="message_open_details">Open details</string>

    <!-- Description -->
    <string name="description">Description</string>

    <!-- Preferences -->
    <string name="preferences_data_cache_title">Data cache</string>
    <string name="preferences_clear_cache_title">Clear cache</string>
    <string name="preferences_clear_cache_desc">Remove all cache data</string>
    <string name="preferences_about_title">About</string>
</resources>
