<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright 2019 Carl-Philipp Harmant

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_selector">

    <RelativeLayout
        android:id="@+id/error_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/progress_error"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/red"
            android:textSize="22sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/desactivated_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/bus_fragment_notloaded"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/orange"
            android:textSize="22sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loading_relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <TextView
            android:id="@+id/loadingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/progress_message"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/loadingView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/progress_wait"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="normal"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/bus_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/bus_fragment_filter"
        android:visibility="invisible"
        android:paddingEnd="@dimen/activity_train_line_padding_right"
        android:paddingStart="16dp">
    </EditText>

    <ListView
        android:id="@+id/bus_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bus_filter">
    </ListView>

</RelativeLayout>
