<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/icons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/favorites_container"
        android:layout_width="0px"
        android:layout_height="wrap_content"

        android:layout_weight="1"
        android:background="@drawable/any_selector"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/activity_favorite_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/station_activity_google_map_link_desc"
            android:src="@drawable/ic_favorite_white_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:text="@string/station_activity_favorite_icon"
            android:textSize="12sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/map_container"
        android:layout_width="0px"
        android:layout_height="wrap_content"

        android:layout_weight="1"
        android:background="@drawable/any_selector"
        android:focusable="true"
        android:clickable="true"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/activity_map_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:contentDescription="@string/station_activity_google_map_link_desc"
            android:focusable="true"
            android:src="@drawable/ic_place_white_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:text="@string/station_activity_map_icon"
            android:textSize="12sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/walk_container"
        android:layout_width="0px"
        android:layout_height="wrap_content"

        android:layout_weight="1"
        android:background="@drawable/any_selector"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/activity_map_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/station_activity_google_map_link_desc"
            android:src="@drawable/ic_directions_walk_white_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:text="@string/station_activity_walk_icon"
            android:textSize="12sp"
            android:textStyle="normal" />
    </LinearLayout>
</LinearLayout>
